# Mongrel

./: LICENSE  README.md  pylintrc  pyproject.toml
.github/workflows/: pylint.yml
data_prep/: data_aggregation_spotify.py  requirements.txt  spotify_validation.sql
examples/: spotify_transfer.py
examples/autoconfig/: spotify_example.py
examples/data_prep/: data_aggregation_spotify.py
mongrel/: __init__.py  requirements.txt
mongrel/configurations/: spotify_mappings.json
mongrel/examples/: spotify_relations.json  spotify_transfer.py
mongrel/examples/data_prep/: data_aggregation_spotify.py
mongrel/helpers/: conversions.py  database_functions.py  exceptions.py  map_flattener.py
mongrel/objects/: relation.py  relation_builder.py  table_builder.py  transferrer.py
src/mongrel/: requirements.txt
src/mongrel/examples/: spotify_mappings.json  spotify_transfer.py
src/mongrel/helpers/: configbuilder.py  constants.py  conversions.py  map_flattener.py  relation_type.py  utils.py
src/mongrel/objects/: enums.py  relation.py  relation_builder.py  table.py  table_builder.py  transferrer.py
src/mongrel/relation_discovery/: configuration_builder.py  relation.py  relation_discovery.py
src/mongrel_transferrer/mongrel/: __init__.py  requirements.txt
transfer/: constants.py  conversions.py  exceptions.py  relation.py  relation_builder.py  table_builder.py  transferrer.py
transfer/configurations/: mappings.json  relations.json  spotify_mappings.json
transfer/helpers/: MapFlattener.py  constants.py  conversions.py  database_functions.py  exceptions.py
transfer/objects/: relation.py  relation_builder.py  table_builder.py  transferrer.py
(+24 files in other folders)
