[build-system]
requires = ["setuptools>=61.0",
    "pandas",
    "pymongo",
    "sqlalchemy",
    "tqdm"
]
build-backend = "setuptools.build_meta"

[project]
name = "Mongrel"
version = "0.0.1"
authors = [
    { name = "Ricardo Prida", email = "mail.prida@gmail.com" },
]
description = "MONGREL is a tool that allows hierarchical datastructures like MongoDB to be ported to relational datastructures like PostgreSQL."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/PrRicardo/Mongrel"
Issues = "https://github.com/PrRicardo/Mongrel/issues"