[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Mongrel"
version = "0.0.4b8"
authors = [
    { name = "Ricardo Prida", email = "mail.prida@gmail.com" },
]
description = "MONGREL is a tool that allows hierarchical datastructures like MongoDB to be ported to relational datastructures like PostgreSQL."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas ~= 2.2.1",
    "pymongo ~= 4.6.2",
    "sqlalchemy ~= 2.0.27",
    "tqdm ~= 4.66.2",
    "psycopg2-binary ~= 2.9.9"
]

[project.urls]
Homepage = "https://github.com/PrRicardo/Mongrel"
Issues = "https://github.com/PrRicardo/Mongrel/issues"
